Resolves issue where scrollbar was getting clipped

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,11 +2,20 @@
 	position:relative;
 	display:flex;
 	flex-direction:column;
-	height:100vh;
+	height:100%;
 }
 
 .main-content-container {
 	display:flex;
 	height:100%;
 	overflow:hidden;
+}
+
+@media screen and (min-width:799px) {
+
+	.main-container {
+		height:100vh;
+		overflow:hidden;
+	}
+
 }
