--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,8 +69,12 @@
 	box-sizing:border-box;
 }
 
-html, body {
+html, body, #root {
 	min-height:100vh;
+}
+
+#root {
+	height:100vh;
 }
 
 html {
